fix: home section alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -101,7 +101,7 @@ body {
 }
 
 .page-section {
-  @apply flex-center h-screen w-full border border-red-600 bg-effects bg-cover pt-[116px];
+  @apply flex-center h-screen w-full overflow-hidden border border-red-600 bg-effects bg-cover pt-[116px];
   > div {
     @apply mx-auto h-full w-full max-w-[1920px];
   }
